# document-mcp

./: .env.example  .gitignore  pyproject.toml  start-mcp-http.bat
scripts/: reindex_file.py  vision_test.py
src/: config.py  indexer.py  main.py  parser.py  tools.py  vision_enhancer.py
src/chunkers/: __init__.py  structure_aware.py
src/parsers/: __init__.py  excel_parser.py  pdf_parser.py  structured_docx.py  visual_utils.py
tests/: LogExtract.txt  test_ingestion.py
tools/: reindex_one.py  unpack_pdf_portfolio.py
