[project]
name = "mcp-doc-indexer"
version = "0.1.0"
description = "MCP server for local document indexing and search using LanceDB"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lancedb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "watchdog>=3.0.0",
    "pymupdf>=1.23.0",
    "python-docx>=1.0.0",
    "fastmcp[http]>=0.1.0",
    "ollama>=0.1.7",
    "pydantic>=2.0.0",
    "asyncio",
    "numpy",
    "pandas",
    "pyarrow",
    "tiktoken",
    "python-dotenv",
    "psutil>=7.0.0",
    "openpyxl>=3.1.0",
    "docling>=2.0.0",
    "easyocr",
    "torch",
    "Pillow>=10.0.0",
]

[project.scripts]
mcp-doc-indexer = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

# Torch and torchvision must come from the CPU-only wheel index.
# The default PyPI builds include CUDA stubs that crash on import on
# CPU-only machines (getwindowsversion / _load_dll_libraries failure).
[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
